--- a/appendix/B.tex
+++ b/appendix/B.tex
@@ -134,9 +134,9 @@ $F_\text{a}$ is the summation of abutment lateral resistance from pile and passi
 
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  % \caption{Relationship between force required for abutment lateral resistance, Fa, and passive pressure response, Pp, to restrain lateral movement.}
-  \caption{Relationship between force required for abutment lateral resistance, Fa, and passive pressure response, $P_\text{p}$, to restrain lateral movement.}
+  \includegraphics{pp-vs-fa.pdf}
+  % \caption{Relationship between force required for abutment lateral resistance, $F_\text{a}$, and passive pressure response, $P_\text{p}$, to restrain lateral movement.}
+  \caption{Relationship between force required for abutment lateral resistance, $F_\text{a}$, and passive pressure response, $P_\text{p}$, to restrain lateral movement.}
   \label{fig:pp-vs-fa}
 \end{figure}
 
@@ -152,9 +152,9 @@ As illustrated in Figure B.8, this end movement is:
 From \cref{fig:delataln-delatal}, it can be seen that $\Delta l_\text{n}$ is reduced with respect to $\Delta l$ as the skew angle, $\theta$, increases. This relationship helps offset the increase in $F_\text{a}/P_\text{p}$ with increasing $\theta$. However, $F_\text{a}$ will still be a sizeable portion of $P_\text{p}$.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  % \caption{Relationship between end normal movement, Δln, and end thermal expansion, Δl.}
-  \caption{Relationship between end normal movement, Δln, and end thermal expansion, Δl.}
+  \includegraphics{delataln-delatal.pdf}
+  % \caption{Relationship between end normal movement, $\Delta l_\text{n}$, and end thermal expansion, $\Delta l$.}
+  \caption{Relationship between end normal movement, $\Delta l_\text{n}$, and end thermal expansion, $\Delta l$.}
   \label{fig:delataln-delatal}
 \end{figure}
 
