--- a/contents/chp01.tex
+++ b/contents/chp01.tex
@@ -504,10 +504,10 @@
 
 % The C(x,t) obtained from \cref{eq:ficks-second-law} is then compared to the critical chloride content, Ccrit , which is the value determined to be the point at which corrosion starts. When the chloride level at a given depth, x, of the structure is reached, the critical value, the corrosion is assumed to initiate. The service life of concrete element can then be assumed to consist of the time period to initiate corrosion plus the time period for propagation of the corrosion to the point that will limit the functionality of concrete element. This process is depicted in \cref{fig:damage-service-life}.
 
-将从\cref{eq:ficks-second-law} 获得的 $C(x,t)$ 与临界氯离子含量 $C_\text{crit}$ 进行比较，该值被确定为腐蚀开始点。当结构的给定深度 $x$ 处的氯离子水平达到临界值时，我们认为腐蚀开始。然后可以假定混凝土的\gls{servicelife}包括开始腐蚀的时间段加上腐蚀传播到将限制混凝土功能的点的时间段。这个过程在\cref{fig:damage-service-life} 中描述。
+将从\cref{eq:ficks-second-law} 获得的 $C(x,t)$ 与临界氯离子含量 $C_\text{crit}$ 进行比较，该值被确定为腐蚀开始点。当结构的给定深度 $x$ 处的氯离子水平达到临界值时，我们认为腐蚀开始。然后可以假定混凝土的\gls*{servicelife}包括开始腐蚀的时间段加上腐蚀传播到将限制混凝土功能的点的时间段。这个过程在\cref{fig:damage-service-life} 中描述。
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics{damage-service-life.pdf}
   % \caption{Relationship between damage and service life. (Source COWI, Denmark)}
   \caption{损伤与\gls*{servicelife}的关系}
   \label{fig:damage-service-life}
@@ -623,15 +623,15 @@
   % \item [步骤 6] Identify suitable approaches for mitigating the failure modes or assessing risk of damage, through life cycle cost analysis. For example, use of better performing materials for sliding surfaces in bearings or use of material prone to deterioration at lower initial cost.
   \item [步骤 6] 通过\acrlong{lcca}，确定减轻故障模式或评估损坏风险的合适方法。例如，在支座的滑动表面使用性能更好的材料，或者以较低的初始成本使用易于\gls*{deterioration}的材料。
   % \item [步骤 7] Modify the bridge element, component, or subsystem under consideration, using the selected strategy and ensure compatibility of different strategies used for various bridge elements, components, or subsystems. This step may involve the need to develop several alternatives.
-  \item [步骤 7] 使用选定的策略修改考虑中的桥梁\gls{element}、\gls{component}或\gls{subsystem}，并确保用于各种桥梁\gls{element}、\gls{component}或\gls{subsystem}的不同策略的兼容性。此步骤可能需要开发多种替代方案。
+  \item [步骤 7] 使用选定的策略修改考虑中的桥梁\gls*{element}、\gls*{component}或\gls*{subsystem}，并确保用于各种桥梁\gls*{element}、\gls*{component}或\gls*{subsystem}的不同策略的兼容性。此步骤可能需要开发多种替代方案。
   % \item [步骤 8] For each modified alternative, estimate the service life of the bridge element, component or subsystem using Finite or Target Service Life Design approaches.
-  \item [步骤 8] 对于每个修改后的备选方案，使用有限或目标\gls{servicelife}设计方法估算桥梁\gls{element}、\gls{component}或\gls{subsystem}的\gls{servicelife}。
+  \item [步骤 8] 对于每个修改后的备选方案，使用有限或目标\gls*{servicelife}设计方法估算桥梁\gls*{element}、\gls*{component}或\gls*{subsystem}的\gls*{servicelife}。
   % \item [步骤 9] For each modified alternative, compare the service life of the bridge element, component, or subsystem to the service life of the bridge system and develop appropriate maintenance, retrofit, and/or replacement plan.
-  \item [步骤 9] 对于每个修改后的备选方案，将桥梁\gls{element}、\gls{component}或\gls{subsystem}的\gls{servicelife}与桥梁\gls{system}的\gls{servicelife}进行比较，并制定适当的维护、改造和/或更换计划。
+  \item [步骤 9] 对于每个修改后的备选方案，将桥梁\gls*{element}、\gls*{component}或\gls*{subsystem}的\gls*{servicelife}与桥梁\gls*{system}的\gls*{servicelife}进行比较，并制定适当的维护、改造和/或更换计划。
   % \item [步骤 10] For each modified alternative, develop design, fabrication, construction, operation, maintenance, replacement, and management plans for achieving the specified design life for the bridge system.
   \item [步骤 10] 对于每个修改后的备选方案，制定设计、制造、施工、运营、维护、更换和管理计划，以实现桥梁\gls{system}的指定设计寿命。
   % \item [步骤 11] For each modified alternative, conduct life cycle cost analysis for each feasible bridge system meeting strength and service life requirements, and select the optimum bridge system
-  \item [步骤 11] 对于每个修改方案，对每个满足强度和\gls{servicelife}要求的可行桥梁\gls{system}进行生命周期成本分析，选择最佳桥梁\gls{system}
+  \item [步骤 11] 对于每个修改方案，对每个满足强度和\gls*{servicelife}要求的可行桥梁\gls*{system}进行生命周期成本分析，选择最佳桥梁\gls*{system}。
   % \item [步骤 12] When specified by the owner or in cases of major and complex bridges, document the entire design for service life processes in a document called the Owner's Manual. Conduct an independent review of the document and provide it to bridge owner at the time of opening the bridge to traffic.
   \item [步骤 12] 当业主指定或在大型和复杂桥梁的情况下，在称为业主手册的文件中记录\gls{servicelife}过程的整个设计。对文件进行独立审查，并在桥梁通车时将其提供给桥梁所有者。
 \end{description}
