--- a/contents/chp03.tex
+++ b/contents/chp03.tex
@@ -1,5 +1,6 @@
 % \chapter{Materials}\label{chp:materials}
-\chapter{材料}\label{chp:materials}
+\chapter{材料}
+\label{chp:materials}
 % \section{Introduction}
 \section{简介}
 % This chapter provides essential information on materials used for constructing durable bridge structures. It focuses on durability and service life issues related mainly to concrete and steel, materials widely used in bridge construction, and provides limited information on other material types used in bridge construction.
