--- a/contents/chp04.tex
+++ b/contents/chp04.tex
@@ -263,7 +263,7 @@ Thermal climate influences on bridge deck service life performance are primarily
 Agencies in cold weather climates that deal with ice and snow on roadways and bridges have traditionally applied deicing salts to melt the ice and snow to facilitate tire traction. The application of these deicing salts is viewed as a safety enhancement for the traveling public; however, these chloride-laden compounds tend to ingress into the concrete deck either through porosity in the concrete or through open deck cracks. The chloride ingress into the bridge deck continues to reduce the effectiveness of the passivating layer around the reinforcing steel, eventually initiating reinforcement corrosion. The reinforcement corrosion process causes the bar to expand, resulting in deck cracking, spalling, and/or delamination. The cross-slope built into bridge decks for drainage purposes causes the salt to wash down towards the bridge gutter adjacent to the traffic railing barriers bounding the bridge. Removal equipment that scrapes snow from the bridge deck also deposits residual snow laden with deicing salts at this location, resulting in a very high concentration of chlorides. Construction joints at this location are particularly susceptible to chloride intrusion, and in many cases this has led to corrosion of the barrier reinforcement.
 
 \subparagraph*{Freeze/Thaw}
-Water absorbed into the concrete deck surface and contained in cracks can freeze in cold weather conditions. The frozen water tends to expand causing stresses within the concrete. Cyclic freezing and thawing of the water absorbed in the deck surface can result in bridge deck deterioration in the form of cracking, scaling, and spalling. Refer to Chapter 3 for additional information on freeze/thaw in concrete.
+Water absorbed into the concrete deck surface and contained in cracks can freeze in cold weather conditions. The frozen water tends to expand causing stresses within the concrete. Cyclic freezing and thawing of the water absorbed in the deck surface can result in bridge deck deterioration in the form of cracking, scaling, and spalling. Refer to \cref{chp:materials} for additional information on freeze/thaw in concrete.
 
 \paragraph{Coastal Climate}
 Coastal climate influences on bridge deck service life performance are primarily due to the introduction of
@@ -296,16 +296,16 @@ aggregates, and can leave crystallized salts on concrete surfaces that can lead 
 reinforcing bars.
 \subparagraph*{Sulfate Attack}
 Exposure to sulfates can cause expansion of the concrete material and consequently result in
-spalling and cracking of bridge deck. Refer to Chapter 3 for additional information on sulfate attack in concrete.
+spalling and cracking of bridge deck. Refer to \cref{chp:materials} for additional information on sulfate attack in concrete.
 
 \paragraph{Reactive Ingredients}
 Reactive ingredients within the mix used for bridge decks can affect service life performance as the reactive
 ingredients alter the volumetric stability of the concrete. These influences primarily occur naturally.
 \subparagraph*{Alkali-Silica Reactivity}
-Alkali-silica reactivity (ASR) results in swelling within concrete that can lead to spalling, cracking, and general concrete deterioration. Refer to Chapter 3, for additional information on ASR in concrete.
+Alkali-silica reactivity (ASR) results in swelling within concrete that can lead to spalling, cracking, and general concrete deterioration. Refer to \cref{chp:materials}, for additional information on ASR in concrete.
 
 \subparagraph*{Alkali-Carbonate Reactivity}
-Alkali-carbonate reactivity (ACR) results in aggregate expansion within concrete that can lead to spalling, cracking, and general concrete deterioration. Refer to Chapter 3 on materials, for additional information on ACR in concrete.
+Alkali-carbonate reactivity (ACR) results in aggregate expansion within concrete that can lead to spalling, cracking, and general concrete deterioration. Refer to \cref{chp:materials} on materials, for additional information on ACR in concrete.
 
 \paragraph{Fire}
 A key factor in the amount of damage that is caused to concrete is the duration of the fire and the heat levels
@@ -447,7 +447,7 @@ in the bay containing the closure pour, if possible. However, the pros and cons 
 
 \subparagraph{Mix Design}
 
-Chapter 3 provides detailed information concerning factors which affect the service life of concrete. The
+\cref{chp:materials} provides detailed information concerning factors which affect the service life of concrete. The
 following provides a brief description of mix design factors which affect the service life of bridge decks.
 
 \emph{Permeability} Concrete is a durable material that largely depends on its ability to resist the infiltration of water and
@@ -731,7 +731,7 @@ Bridge decks can also be designed for overload conditions with adequate determin
 overload and the frequency of its application. Strategies for addressing the additional strength requirements for
 overloads can be addressed by increasing the thickness of the deck.
 
-Additional information on wear and abrasion can be found in Chapter 3. Membranes and overlays can be utilized
+Additional information on wear and abrasion can be found in \cref{chp:materials}. Membranes and overlays can be utilized
 to separate the wheel contact surface from the deck surface.
 
 % \subsection{Strategies to Mitigate System-Dependent Loads}
@@ -756,10 +756,10 @@ Several enhancements are viable for addressing the restraint forces at the inter
 supporting beam/stringer superstructure elements. Potential enhancements include:
 \begin{itemize}
   \item Using low modulus concrete mix design, which allows the deck to accommodate the shrinkage strain with
-  less tension force, which can reduce cracking. Refer to Chapter 3 for additional discussion of low modulus
+  less tension force, which can reduce cracking. Refer to \cref{chp:materials} for additional discussion of low modulus
   concrete mix designs.
   \item Using a high creep concrete mix in the supporting superstructure element, which continues to reduce the
-  locked-in tension force in the bridge. Refer to Chapter 3 for additional discussion of high creep concrete mix
+  locked-in tension force in the bridge. Refer to \cref{chp:materials} for additional discussion of high creep concrete mix
   designs.
   \item Using delayed composite action systems where the interface of the bridge deck and the supporting
   beam/stringer superstructure elements is not made composite until a majority of the deck shrinkage has
@@ -773,7 +773,7 @@ selection, see Chapter 2 - System Selection.
 
 \paragraph{Fully-Integral Deck Systems}
 Eliminating expansion joints at abutments and over piers can enhance bridge deck performance. This bridge
-system is commonly referred to as a jointless bridge, and is addressed in Chapter 8.
+system is commonly referred to as a jointless bridge, and is addressed in \cref{chp:jointless-bridge}.
 
 \paragraph{Semi-Integral Deck Systems}
 A significant number of states utilize a semi-integral approach to bridge deck systems. This system provides
@@ -823,7 +823,7 @@ reinforcement, initiating the corrosion process.
 
 \subsubsection{Concrete Mix Design}
 The impermeability of concrete enhances the protection of bridge deck reinforcement. Concrete mix design is
-addressed earlier in this section and is further discussed in Chapter 3.
+addressed earlier in this section and is further discussed in \cref{chp:materials}.
 
 Enhanced service life of bridge decks can be achieved by implementing a mix design to obtain desirable
 properties for mitigating the potential for deficiencies. The desirable properties for enhanced performance include
@@ -848,7 +848,7 @@ Bridge deck concrete can also be enhanced by incorporating proper materials and 
 
 It should be noted that some of these enhancements may conflict, and therefore a mix design must incorporate
 desired features with the understanding that all enhancement strategies cannot be achieved. For more information on
-mix designs, refer to Chapter 3.
+mix designs, refer to \cref{chp:materials}.
 
 \subsubsection{Reinforcement Selection}
 The selection of bridge deck reinforcement can enhance the service life of the bridge deck and increase resistance
@@ -861,7 +861,7 @@ Enhanced reinforcing steel includes:
   Installation and Grouting Manual (Corven and Moreton 2004).
 \end{itemize}
 
-Refer to Chapter 3, for more information on reinforcing materials.
+Refer to \cref{chp:materials}, for more information on reinforcing materials.
 
 \subsubsection{Bridge Deck Drainage}
 Eliminating prolonged exposure to moisture, allowing the bridge deck to be maintained in a dry condition, can
@@ -881,7 +881,7 @@ grates, and piping should be sized appropriately to be self-flushing, minimizing
 The elimination of tension in a cast-in-place bridge deck enhances the performance of the bridge deck by
 eliminating or significantly reducing deck cracking. Compression is typically introduced by posttensioning the
 concrete; however, the durability of the posttensioning is contingent on the proper incorporation of durability
-enhancements as well. Refer to Chapter 3 for additional information on the durability concerns of posttension
+enhancements as well. Refer to \cref{chp:materials} for additional information on the durability concerns of posttension
 systems.
 
 Compression can also be introduced into the bridge deck of continuous girder bridge systems through the use of a
@@ -910,7 +910,7 @@ extending the service-life of damaged bridge decks in some states. It requires s
 moisture necessitating extra care in curing. Recently, silica-fume concrete and latex-modified concrete overlays have
 been successfully used in extending the service life of contaminated structures and have improved workability
 compared to low-slump concrete overlays. Polymer concrete overlays are also available, generally as a temporary
-repair method on damaged bridge decks. Refer to Chapter 3, Materials, for more information on overlays.
+repair method on damaged bridge decks. Refer to \cref{chp:materials}, Materials, for more information on overlays.
 
 \subsubsection{Sealers}
 Sealers are expected to minimize the intrusion of aggressive solutions into concrete. The primary purposes of
@@ -986,7 +986,7 @@ The casting sequence should be specified by the designer and noted on the design
 Proper sealing, making the construction joint waterproof and preventing water intrusion between the bridge deck
 elements, enhances construction joints between adjacent cast-in-place members, such as transverse construction
 joints in cast-in-place segmental structures. Waterproofing strategies are addressed in the FHWA Posttensioning
-Tendon Installation and Grouting Manual (Corven and Moreton 2004) and in Chapter 3 on materials.
+Tendon Installation and Grouting Manual (Corven and Moreton 2004) and in \cref{chp:materials} on materials.
 
 Numerous details have been utilized by many states for these types of structures. Many details transfer only the
 vertical shear across the construction joint, causing the adjacent members to act together vertically, but allowing the
@@ -995,7 +995,7 @@ joint. In general, details in which the connection between these adjacent member
 vertical shears and transverse moments, have performed significantly better over time.
 
 Enhanced service life of filled construction joints between adjacent cast-in-place members can be achieved
-through the use of ultra-high performance concrete (UHPC). UHPC, described in Chapter 3, is a product that
+through the use of ultra-high performance concrete (UHPC). UHPC, described in \cref{chp:materials}, is a product that
 provides high strength and stiffness with negligible permeability and improved durability. It is expected to reduce
 maintenance requirements and extended service life. When used in bridge deck construction joints, consideration
 should be given to two issues. a) grinding the surface due to higher strength of UHPC and b) dissimilarities in color.
@@ -1060,7 +1060,7 @@ essential for the continuation of hydration reactions and the control of crackin
 concrete is enhanced by ensuring that moisture is not lost. This can be accomplished through the use of curing
 compounds, and maintaining a wet curing environment, such as under a moist burlap covering, for seven to ten days.
 Performance enhancements are maximized with longer wet cure periods. The wet curing process also helps maintain
-thermal control of the bridge deck in its critical early stages of hydration. Refer to Chapter 3 on materials for more
+thermal control of the bridge deck in its critical early stages of hydration. Refer to \cref{chp:materials} on materials for more
 information on concrete curing.
 
 \subsubsection{Maintenance Considerations for Existing Bridge Decks}
@@ -1176,7 +1176,7 @@ strategies for precast bridge deck systems. The identified systems can achieve l
 inspection and maintenance as indicated. Table 4.13 provides strategies for rehabilitation of existing bridge decks,
 which may be used in the case of a bridge widening. Note that deterioration modes addressed through proper design,
 such as fatigue and overload potential, are not addressed with a strategy in these tables. Other material deterioration
-modes, such as freeze/thaw and sulfate attack, are addressed in Chapter 3.
+modes, such as freeze/thaw and sulfate attack, are addressed in \cref{chp:materials}.
 
 The selection of appropriate material and protection strategies is fairly consistent for all of the concrete bridge
 deck systems included in this chapter, with only minor differences in the durability performance selection process
