--- a/contents/chp05.tex
+++ b/contents/chp05.tex
@@ -1,5 +1,6 @@
 % \chapter{Corrosion of Steel in Reinforced Concrete Bridges}
-\chapter{钢筋混凝土桥梁中的钢筋腐蚀}\label{chp:corrosion-of-steel-rc-bridge}
+\chapter{钢筋混凝土桥梁中的钢筋腐蚀}
+\label{chp:corrosion-of-steel-rc-bridge}
 % \section{Introduction}
 \section{简介}
 % This chapter of the Guide provides essential information for addressing corrosion of reinforcing steel in conventionally reinforced concrete structures. The focus is on controlling and mitigating corrosion for extended durability and service life. Corrosion in prestressed or posttensioned concrete structures is not discussed.
