--- a/contents/chp07.tex
+++ b/contents/chp07.tex
@@ -1,5 +1,6 @@
 % \chapter{Fatigue and Fracture of Steel Structures}
-\chapter{钢结构的疲劳与开裂}\label{chp:fatigue-fracture-steel-structures}
+\chapter{钢结构的疲劳与开裂}
+\label{chp:fatigue-fracture-steel-structures}
 % \section{Introduction}
 \section{简介}
 % This chapter introduces basic principles related to fatigue and fracture in steel bridges, and discusses factors that cause fatigue and fracture. Various available options for repairing observed cracking in steel bridges are also presented. These options are adapted from the Manual for Repair and Retrofit of Fatigue Cracks in Steel Bridges (Dexter and Ocel 2006), and are proposed as a guide for the detailing of repairs and retrofits for fatigue cracks. This chapter only contains summarized information from this manual and thus should not be the only means used to develop specifications needed for the repair and retrofit of fatigue damaged details. Refer to the referenced manual for additional detailed descriptions of the topics, procedures, and examples presented in this chapter. Further, this chapter should be used in combination with other existing codes, specifications, and engineering judgment.
