--- a/contents/chp08.tex
+++ b/contents/chp08.tex
@@ -1,13 +1,14 @@
 % \chapter{Jointless Bridges}\label{chp:jointless-bridge}
-\chapter{无缝桥梁}\label{chp:jointless-bridge}
+\chapter{无缝桥梁}
+\label{chp:jointless-bridge}
 % \section{Introduction}
 \section{简介}
 % A jointless bridge has a continuous deck with no expansion joints over the superstructure, abutments, and piers, and is also commonly referred to as an integral bridge. In this type of bridge structure, all movement due to thermal, creep, and shrinkage strain is accommodated either within the system itself or at the ends of the approach slabs where the slabs abut the roadway pavement. Because there are no joints, ride quality is improved and maintenance can be greatly reduced.
 无缝桥具有连续桥面，在上部结构、桥台和桥墩上没有伸缩缝，通常也称为整体桥。在这种类型的桥梁结构中，由于热应变、徐变应变和收缩应变引起的所有运动要么在系统本身内，要么在引道板与车行道路面相邻的端部进行调节。由于没有接头，乘坐质量得到提高，维护工作也大大减少。
 
-% Leaking deck joints have been a major cause of bridge deterioration and reduced service life, especially where roadway drainage carrying deicing chemicals can spill onto bridge elements below. Elimination of bridge deck expansion joints is therefore an important consideration in bridge system selection to provide long-term service life, as discussed in Chapter 2.
+% Leaking deck joints have been a major cause of bridge deterioration and reduced service life, especially where roadway drainage carrying deicing chemicals can spill onto bridge elements below. Elimination of bridge deck expansion joints is therefore an important consideration in bridge system selection to provide long-term service life, as discussed in \cref{chp:bridge-system-selection}.
 
-桥面接缝漏水一直是桥梁劣化和使用寿命缩短的主要原因，尤其是在道路排水系统中，携带除冰化学品的排水系统可能会溢出到下方的桥梁\gls{element}上。因此，如\cref{chp:bridge-system-selection} 所述，消除桥面伸缩缝是选择桥梁系统以提供长期使用寿命的重要考虑因素。
+桥面接缝漏水一直是桥梁劣化和使用寿命缩短的主要原因，尤其是在道路排水系统中，携带除冰化学品的排水系统可能会溢出到下方的桥梁\gls{element}上。因此，如\cref{chp:bridge-system-selection}所述，消除桥面伸缩缝是选择桥梁系统以提供长期使用寿命的重要考虑因素。
 
 % This chapter provides a summary of design, construction and maintenance provisions related to the use of jointless bridges.
 本章概述了与使用无缝桥梁相关的设计、施工和维护规定。
@@ -1719,13 +1720,9 @@ sufficient for jointless bridge construction, and proper drainage behind the bac
 Although adoption of integral-type bridges will eliminate some of the more troublesome problems associated with
 jointed bridges and yield significantly more durable structures, they will not eliminate endemic highway construction
 problems that are somewhat related to accelerated construction, all-weather construction, marginal construction
-supervision, and other construction issues identified in Chapter 3 on materials and Chapter 4 on bridge deck.
+supervision, and other construction issues identified in \cref{chp:materials} on materials and \cref{chp:bridge-decks} on bridge deck.
 
-Transverse and diagonal deck slab cracks, stage construction issues, lateral rotation of superstructure, erosion of
-embankments, marginal quality of structure movement systems, and other problems have appeared to trouble design,
-construction, and maintenance engineers. Except for early-age deck slab cracking, these problems are generally the
-result of failure to anticipate and apply typical design and construction provisions to achieve trouble-free construction
-and more durable structures.
+Transverse and diagonal deck slab cracks, stage construction issues, lateral rotation of superstructure, erosion of embankments, marginal quality of structure movement systems, and other problems have appeared to trouble design, construction, and maintenance engineers. Except for early-age deck slab cracking, these problems are generally the result of failure to anticipate and apply typical design and construction provisions to achieve trouble-free construction and more durable structures.
 
 \subsection{Deck Cracking}
 Diagonal deck slab cracks located at acute corners of integral-type bridges are occasionally reported. When
