--- a/contents/chp10.tex
+++ b/contents/chp10.tex
@@ -1,5 +1,6 @@
 % \chapter{Bridge Bearings}
-\chapter{桥梁支座}\label{chp:bridge-bearings}
+\chapter{桥梁支座}
+\label{chp:bridge-bearings}
 % \section{Introduction}
 \section{简介}
 % Bearings are a critical element within overall bridge systems. Although they represent only a small part of the overall structure cost, they can potentially cause significant problems if they don’t function properly or if possible maintenance, retrofit, or replacement strategies are not envisioned and well planned at the design stage. Bridge superstructures experience translational movements and end rotations caused by traffic loading, thermal effects, creep and shrinkage, wind and seismic forces, initial construction tolerances, and other factors. Bridge bearings are designed and built to accommodate these movements and rotations while supporting required gravity loads, transmitting those loads to the substructure, and providing necessary restraint for the superstructure. Proper functioning of bridge bearings is assumed in the analysis and design of overall bridge systems. Bearing failure or improper behavior can lead to significant changes in load distribution and overall structural behavior that are not accounted for in the design, and can significantly affect the superstructure/substructure interaction.
@@ -292,7 +293,7 @@ loads than assumed in design, can also lead to reduced service life. Overload ca
 depending on bearing type.
 
 Incorrect assumptions during the design process can also significantly affect the service life of bearings because
-of system restraint. For example, as described in Chapter 8 on jointless bridges, in the case of curved girder bridges,
+of system restraint. For example, as described in \ref{chp:jointless-bridge} on jointless bridges, in the case of curved girder bridges,
 there might not be a point within structure that can be designated as point of zero movement. Such an assumption can
 lead to use of a fixed bearing type, without any capability or allowance for transverse or longitudinal movements.
 The end result of such wrong assumption is that the bearing is subjected to actions that cannot be accommodated by
@@ -740,13 +741,13 @@ eliminate bearings entirely should also be considered, but in most cases this wi
 of bearings cannot be avoided.
 
 \begin{itemize}
-  \item Integral abutment systems that avoid deck joints and bearings. Refer to Chapter 8 on jointless bridges, for
+  \item Integral abutment systems that avoid deck joints and bearings. Refer to \cref{chp:jointless-bridge} on jointless bridges, for
   general design guidelines. This has become a popular approach by many states for improving bridge service
   life. Fully-integral abutment construction eliminates both deck joints and bearings at abutments, and is also
   lower in initial cost. Semi-integral construction eliminates deck joints.
   \item Proper use of integral abutments requires an understanding of pile and cap behavior and limitations regarding
   bridge length and geometrics such as curvature and skew.
-  \item Integral pier systems that avoid deck joints and bearings. See Chapter 2 on system selection, for more
+  \item Integral pier systems that avoid deck joints and bearings. See \cref{chp:bridge-system-selection} on system selection, for more
   detailed discussion of integral pier options.
   \item Bridge systems using integral girder/pier cap construction have been used occasionally by some states to
   accommodate vertical clearance issues, to avoid sharp skews, or to develop frame action for seismic design.
@@ -785,7 +786,7 @@ lead to higher stresses, damage, wear, and reduced service life.
 
 \begin{itemize}
   \item Curved girder bridges. These bridges do not expand and contract along girder lines. A typical approach is
-  to assume movement to occur along chord lines from the fixed point to expansion points. See \cref{fig:bearing-orientation-curved}. See Chapter 8 on jointless bridges for additional discussion on determining the point of zero movement or
+  to assume movement to occur along chord lines from the fixed point to expansion points. See \cref{fig:bearing-orientation-curved}. See \cref{chp:jointless-bridge} on jointless bridges for additional discussion on determining the point of zero movement or
   fixed point in integral abutment bridges.
 
   \begin{figure}
@@ -1232,7 +1233,7 @@ summarize the process:
 \begin{enumerate}[label=步骤 1.\arabic*,itemindent=4em]
   \item Determine operational and service life requirements:
   \begin{itemize}
-    \item Review the targeted bridge design service life. This should be done at the bridge system selection stage where the targeted bridge design service life is identified based on a number of factors. See Chapter 2 on bridge system selection.
+    \item Review the targeted bridge design service life. This should be done at the bridge system selection stage where the targeted bridge design service life is identified based on a number of factors. See \cref{chp:bridge-system-selection} on bridge system selection.
     \item Identify total traffic and truck volumes.
     \item Identify local environmental factors that can affect bearing service life or performance:
     \begin{itemize}
