--- a/contents/chp11.tex
+++ b/contents/chp11.tex
@@ -281,10 +281,10 @@ $\left[ \frac{1}{(1+r)^{n_k}}\right]$ 这一项称为贴现因子。
 风险的概念源于与未来事件相关的不确定性，以及无法知道今天采取的特定行动会产生什么结果。风险可以是客观的或主观的。主观风险是一个人对特定事件发生可能性的看法；这种对风险的认识可能包括避免风险的能力和对特定结果后果的评估。另一方面，客观风险包含理论、实验、观察和其他无偏见的信息。最终，以不同程度的风险承受能力为特征并且对风险的感知在本质上是主观的决策者会做出决策。然而，风险分析的目标是提供最佳无偏风险估计，以最准确地表示客观风险来武装决策者。
 
 % \cref{fig:stochastic-approach-lcca} depicts the stochastic approach as a whole. Stated succinctly, it reflects uncertainty in input factors (e.g., construction and repair costs and the timing of those activities) in the probability distribution of the results. Description of the specific steps involved in stochastic approach follow.
-\cref{fig:stochastic-approach-lcca} 描述了整个随机方法。简而言之，它反映了结果概率分布中输入因素（例如建筑和维修成本以及这些活动的时间安排）的不确定性。随机方法中涉及的具体步骤的描述如下。
+\cref{fig:stochastic-approach-lcca} 描述了整个随机方法。简而言之，它反映了结果概率分布中输入因素（例如建设和维修成本以及这些活动的时间安排）的不确定性。随机方法中涉及的具体步骤的描述如下。
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{stochastic-approach.pdf}
+  \includegraphics{stochastic-approach.pdf}
   % \caption{Stochastic approach to LCCA}
   \caption{\acrlong*{lcca}的随机方法}
   \label{fig:stochastic-approach-lcca}
@@ -313,7 +313,9 @@ $\left[ \frac{1}{(1+r)^{n_k}}\right]$ 这一项称为贴现因子。
 虽然正态分布和均匀分布围绕其平均值对称，但三角分布可以是对称的或不对称的。其他类型的常见不对称分布是指数分布和对数正态分布。当有大量硬数据可用时，可以通过使用统计技术为每个数据建立拟合优度来确定最佳分布。然而，当数据可用性有限时，三角分布可以用作分布形状的粗略估计。
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics{uniform-distribution.pdf}\hfill
+  \includegraphics{triangle-distribution.pdf}\hfill
+  \includegraphics{normal-distribution.pdf}
   % \caption{Example probability distributions}
   \caption{概率分布示例}
   \label{fig:example-probability-distributions}
@@ -336,7 +338,7 @@ $\left[ \frac{1}{(1+r)^{n_k}}\right]$ 这一项称为贴现因子。
 然而，当没有足够的相关数据时，通常会使用小组访谈来确定不确定变量的概率。召集专家小组确定输入分布的边界和一般形状。从专家那里获取信息的过程可能包括小组会议、个人访谈以及正式调查和问卷调查。专家启发的目标是建立输入分布的一般形状，并确定输入变量之间是否存在任何相互依赖性。\cref{fig:expert-opinion} 显示了专家启发的过程。
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{expert-opinion}
+  \includegraphics{expert-opinion.pdf}
   % \caption{Using expert opinion to develop probability distributions}
   \caption{使用专家意见来开发概率分布}
   \label{fig:expert-opinion}
