--- a/figures/component-deck.tex
+++ b/figures/component-deck.tex
@@ -18,6 +18,11 @@
     draw=red!50!black,
     fill=red!50!black!20,
   },
+  subsys/.style={
+    methodbase,
+    draw=brown!50!black,
+    fill=brown!50!black!20,
+  },
   comp/.style={
     methodbase,
     draw=blue!50!black,
